[gd_scene load_steps=3 format=3 uid="uid://btpor10h6s0q6"]

[ext_resource type="Script" uid="uid://cd840akqfwh67" path="res://scenes/UI/winning_screen.gd" id="1_mityd"]
[ext_resource type="PackedScene" uid="uid://b4vr477gwn5wj" path="res://scenes/levels/level_1.tscn" id="2_mityd"]

[node name="WinningScreen" type="CanvasLayer"]
script = ExtResource("1_mityd")
level_one_scene = ExtResource("2_mityd")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.318116, 0.41155, 0.351116, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "You Win!"
horizontal_alignment = 1

[node name="TimeLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BiscuitLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RestartButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Restart Run"
